deployment/spring-boot-jib-workbench.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jib-workbench
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jib-workbench-deployment
  namespace: jib-workbench
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: jib-workbench-app
    spec:
      containers:
      - image: roamingthings/spring-boot-jib-workbench
        imagePullPolicy: Always
        name: jib-workbench-app
        ports:
        - containerPort: 8080
          name: server
---
apiVersion: v1
kind: Service
metadata:
  name: jib-workbench-service
  namespace: jib-workbench
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: jib-workbench-app
