deployment/spring-boot-jib-workbench-ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jib-workbench
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jib-workbench-deployment
  namespace: jib-workbench
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: jib-workbench-app
    spec:
      containers:
      - image: roamingthings/spring-boot-jib-workbench
        imagePullPolicy: Always
        name: jib-workbench-app
        ports:
        - containerPort: 8080
          name: server
---
apiVersion: v1
kind: Service
metadata:
  name: jib-workbench-service
  namespace: jib-workbench
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: jib-workbench-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jib-workbench-ingress
  namespace: jib-workbench
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: jib-workbench-service
    servicePort: 8080
